--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"He
 <body>
 <div class="container">
   <!-- Intro sequence -->
-  <div id="intro" class="card hidden">
+  <div id="intro" class="card ">
     <div id="stage1" class="center hidden">
       <div class="h1">Are you ready for a surprise? 😏</div>
       <div class="lead">Click <strong>Yes</strong> if you're ready to see something special.</div>
@@ -42,14 +42,14 @@ body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"He
       <div class="small">(Just click Yes — it's for Kittu 💗)</div>
       <div class="progress"><div id="bar" class="bar" style="width:25%"></div></div>
     </div>
-    <div id="stage2" class="center hidden">
+    <div id="stage2" class="center ">
       <div class="h1">Are you pakka ready? 😝</div>
       <div class="lead">One more click and we'll move on.</div>
       <button class="btn" onclick="nextStage(3)">Yes</button>
       <div class="small">Paglu Shivi is watching 😉</div>
       <div class="progress"><div class="bar" style="width:50%"></div></div>
     </div>
-    <div id="stage3" class="center hidden">
+    <div id="stage3" class="center ">
       <div class="h1">Are you super ready? 🤭</div>
       <div class="lead">This is getting serious — but in a cute way.</div>
       <button class="btn" onclick="nextStage(4)">Yes</button>
